# D-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ensaio_0.md  ensaio_1.md  ensaio_2.md  ensaio_3.md  ensaio_4.md  ensaio_5.md  pyproject.toml
classifier/: main.ipynb
classifier/classifier/: keras_metadata.pb  saved_model.pb
classifier/classifier/variables/: variables.data-00000-of-00001  variables.index
core/: classify.py  data_search.py  generate_text.py  local_search.py  local_similarity_search.py  main.py  open_ai.py  save_data.py  test.py  train_generator.py  web_crawl.py  web_search.py
data/: data_raw.json  title_url.json
