[tool.poetry]
name = "d-bot"
version = "0.1.0"
description = "A bot for Discord"
authors = ["Enrico <enrico.francesco.damiani@gmail.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
discord = "^2.1.0"
poetry-dotenv-plugin = "^0.1.0"
bs4 = "^0.0.1"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
urllib3 = "^1.26.15"
chardet = "^5.1.0"
shellingham = "^1.5.0.post1"
requests = "^2.28.2"
lxml = "^4.9.2"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
